Fix menu button width on iOS7

--- a/src/styles/partials/navigation.styl
+++ b/src/styles/partials/navigation.styl
@@ -37,6 +37,8 @@
   
   @media ({$bpMaxW375}), ({$bpMaxDevW414}) {
     display: block;
+    
+    max-width: 6rem;
   }
 }
 
